@@ -60,7 +60,7 @@ end
 
 #
 # offsetsAndConfigurationIndex(ast, file) ->
-#     {[offsets, index], ...}
+#     [[offsets, index], ...]
 #
 # Parses the offsets from a file and returns a list of offsets and the
 # index of the configuration that is valid in this build target.
@@ -154,16 +154,19 @@ def offsetsAndConfigurationIndex(file)
                     | data |
                     offsets << readInt(endianness, data)
                 }
-                if not result.has_key?(offsets)
-                    result[offsets] = index
-                end
+                result[index] = offsets
             }
         end
     }
     
     raise MissingMagicValuesException unless result.length >= 1
     
-    result
+    # result is {index1=>offsets1, index2=>offsets2} but we want to return
+    # [[offsets1, index1], [offsets2, index2]].
+    return result.map {
+        | pair |
+        pair.reverse
+    }
 end
 
 #
